--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2>Design</h2>
         <h3>どんなデザインを作るの？</h3>
         <ul class="box-wrap">
-          <li class="box"><a href="design/01.html"><img src="image/ブランケット.png" class="design_img"></p></a></li>
+          <li class="box"><a href="design/01.html"><img src="image/ブランケット.png" class="design_img"><p class="design_img"></a></li>
           <li class="box"><a href="design/02.html"><img src="image/針病院.jpg" class="design_img"><p class="design_img"></p></a></li>
           <li class="box"><a href="design/03.html"><img src="image/病院.jpg" class="design_img"><p class="design_img"></p></a></li>
           <li class="box"><a href="design/04.html"><img src="image/ゲーム.jpg" class="design_img"><p class="design_img"></p></a></li>
