--- a/design/05.html
+++ b/design/05.html
@@ -13,12 +13,11 @@
       <h2>タイトル</h2>
       <p class="common-text">aaaaaaaaaaaaaaaaaa</p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/バナー01.jpg" class="design_img"></p>
-        <p class="design_box"><img src="../image/バナー02.jpg" class="design_img"></p>
-        <p class="design_box"><img src="../image/バナー03.jpg" class="design_img"></p>
-        <p class="design_box"><img src="../image/バナー04.jpg" class="design_img"></p>
-        <p class="design_box"><img src="../image/バナー05.jpg" class="design_img"></p>
-        <p class="design_box"><img src="../image/バナー06.jpg" class="design_img"></p>
+        <p class="design_box"><img src="../image/b01.jpg" class="design_img"></p>
+        <p class="design_box"><img src="../image/b02.jpg" class="design_img"></p>
+        <p class="design_box"><img src="../image/b03.jpg" class="design_img"></p>
+        <p class="design_box"><img src="../image/b04.jpg" class="design_img"></p>
+        <p class="design_box"><img src="../image/b05.jpg" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
