--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <h2>Design</h2>
         <h3>どんなデザインを作るの？</h3>
         <ul class="box-wrap">
-          <li class="box"><a href="design/01.html"><img src="image/ブランケット.png" class="design_img"><p class="design_img"></a></li>
+          <li class="box"><a href="design/01.html"><img src="image/branket.png" class="design_img"><p class="design_img"></a></li>
           <li class="box"><a href="design/02.html"><img src="image/針病院.jpg" class="design_img"><p class="design_img"></p></a></li>
           <li class="box"><a href="design/03.html"><img src="image/病院.jpg" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/04.html"><img src="image/ゲーム.jpg" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/05.html"><img src="image/バナー01.jpg" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/04.html"><img src="image/game.jpg" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/05.html"><img src="image/b01.jpg" class="design_img"><p class="design_img"></p></a></li>
           <li class="box"><a href="design/06.html"><img src="image/ビビアップ.png" class="design_img"><p class="design_img"></p></a></li>
         </ul>
       </section>
