--- a/design/04.html
+++ b/design/04.html
@@ -13,7 +13,7 @@
       <h2>タイトル</h2>
       <p class="common-text">aaaaaaaaaaaaaaaaaa</p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/ゲーム.jpg" class="design_img"></p>
+        <p class="design_box"><img src="../image/game.jpg" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
