--- a/design/01.html
+++ b/design/01.html
@@ -10,8 +10,12 @@
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
-      <h2>タイトル</h2>
-      <p class="common-text">aaaaaaaaaaaaaaaaaa</p>
+      <h2>南国商品サイト詳細ページのブランケットページ作成</h2>
+      <p class="common-text">ブランケットの使い勝手の良さを前面に出したページにしたいと思い、<br>
+      海で使用するイメージをユーザーが持てるような、場面を感じさせるビジュアルのイラストを豊富に配置しました。<br>
+      使用したい気持ちを掻き立てるような、明るいテイストで休日の南国をイメージしました。
+      CVボタンを浮き出すデザインにしたことも、獲得につなげるために仕上げたデザインになります。
+      </p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/branket.png" class="design_img"></p>
         <p class=""></p>
