--- a/design/02.html
+++ b/design/02.html
@@ -10,8 +10,10 @@
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
-      <h2>タイトル</h2>
-      <p class="common-text">aaaaaaaaaaaaaaaaaa</p>
+      <h2>美容針サロンのサイト</h2>
+      <p class="common-text">
+      お客様がこのWEBサイトに何を求めているのかをリサーチし、<br>
+      お客様の要望を押さえた上でトンマナを緑＝癒しを基調とした、安心感のあるデザインに仕上げました。</p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/針病院.jpg" class="design_img"></p>
         <p class=""></p>
