--- a/design/05.html
+++ b/design/05.html
@@ -10,8 +10,12 @@
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
-      <h2>タイトル</h2>
-      <p class="common-text">aaaaaaaaaaaaaaaaaa</p>
+      <h2>バナー制作・ディレクション</h2>
+      <p class="common-text">私の担当が「テアトルアカデミー」という芸能オーディション勧誘の<br>
+      訴求バナーでしたので、赤ちゃんからご老人までの芸能デビューしたいユーザーをターゲットに
+    　バナーの内容・デザインを考案しました。<br>
+      基本的に今までアップをしてきた「勝ち訴求」からインスピレーションを受けて制作することが重要ですので、
+      勝ちパターンのどこが良かったのか特徴を分散し、法則をストックすることを行なっていました。</p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/b01.jpg" class="design_img"></p>
         <p class="design_box"><img src="../image/b02.jpg" class="design_img"></p>
