--- a/design/03.html
+++ b/design/03.html
@@ -10,8 +10,11 @@
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
-      <h2>タイトル</h2>
-      <p class="common-text">aaaaaaaaaaaaaaaaaa</p>
+      <h2>テニスゲーム</h2>
+      <p class="common-text">コンペで制作をしたアプリデザインになります。<br>デザインは機械的なスタイリッシュなものがクライアントの要望としてありましたので、<br>
+      黒・青・黄色で現代的かつスッキリとしたテイストでまとめました。<br>
+       ユーザーとユーザーをつなげる場を大切にしたいとのことで、ユーザーの取っ掛かりやすいLINEテイストのメッセージの場所を取り入れ、
+      戦った後にコメントで繋がれるようにしました。</p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/病院.jpg" class="design_img"></p>
         <p class=""></p>
