--- a/design/04.html
+++ b/design/04.html
@@ -10,8 +10,10 @@
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
-      <h2>タイトル</h2>
-      <p class="common-text">aaaaaaaaaaaaaaaaaa</p>
+      <h2>障害者用のリクルートサイト</h2>
+      <p class="common-text">
+        緑の安心感・オレンジの明るいイメージをトンマナとして採用し、<br>
+      　図やイラストを用いて読み進めやすいデザインにしました。</p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/game.jpg" class="design_img"></p>
         <p class=""></p>
