--- a/design/06.html
+++ b/design/06.html
@@ -10,8 +10,9 @@
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
-      <h2>タイトル</h2>
-      <p class="common-text">aaaaaaaaaaaaaaaaaa</p>
+      <h2>テレビの制作会社のサイト</h2>
+      <p class="common-text">会社のコーポレートサイトのデザイン・コーディングの更新作業を行いました。<br>
+      </p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/ビビアップ.png" class="design_img"></p>
         <p class=""></p>
