--- a/design/03.html
+++ b/design/03.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../common.css">
+    <meta name=“viewport“ content=“width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0“>
     <title>中村佳代のportfolio</title>
   </head>
   <body>
@@ -10,11 +11,10 @@
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
-      <h2>テニスゲーム</h2>
-      <p class="common-text">コンペで制作をしたアプリデザインになります。<br>デザインは機械的なスタイリッシュなものがクライアントの要望としてありましたので、<br>
-      黒・青・黄色で現代的かつスッキリとしたテイストでまとめました。<br>
-       ユーザーとユーザーをつなげる場を大切にしたいとのことで、ユーザーの取っ掛かりやすいLINEテイストのメッセージの場所を取り入れ、
-      戦った後にコメントで繋がれるようにしました。</p>
+      <h2>障害者用のリクルートサイト</h2>
+      <p class="common-text">
+        緑の安心感・オレンジの明るいイメージをトンマナとして採用し、<br>
+      　図やイラストを用いて読み進めやすいデザインにしました。</p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/病院.jpg" class="design_img"></p>
         <p class=""></p>
