--- a/design/05.html
+++ b/design/05.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../common.css">
+    <meta name=“viewport“ content=“width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0“>
     <title>中村佳代のportfolio</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
       訴求バナーでしたので、赤ちゃんからご老人までの芸能デビューしたいユーザーをターゲットに
     　バナーの内容・デザインを考案しました。<br>
       基本的に今までアップをしてきた「勝ち訴求」からインスピレーションを受けて制作することが重要ですので、
-      勝ちパターンのどこが良かったのか特徴を分散し、法則をストックすることを行なっていました。</p>
+      勝ちパターンのどこが良かったのか特徴を分散して結果を出し、法則をストックすることを行なっていました。</p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/b01.jpg" class="design_img"></p>
         <p class="design_box"><img src="../image/b02.jpg" class="design_img"></p>
