--- a/design/01.html
+++ b/design/01.html
@@ -10,7 +10,7 @@
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
-      <h2>南国商品サイト詳細ページのブランケットページ作成</h2>
+      <h2>南国商品サイト詳細ページの<br>ブランケットページ作成</h2>
       <p class="common-text">ブランケットの使い勝手の良さを前面に出したページにしたいと思い、<br>
       海で使用するイメージをユーザーが持てるような、場面を感じさせるビジュアルのイラストを豊富に配置しました。<br>
       使用したい気持ちを掻き立てるような、明るいテイストで休日の南国をイメージしました。
