--- a/design/01.html
+++ b/design/01.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../common.css">
     <title>中村佳代のportfolio</title>
+    <meta name=“viewport“ content=“width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0“>
   </head>
   <body>
       <p class="tag">
