--- a/design/05.html
+++ b/design/05.html
@@ -7,7 +7,7 @@
     <title>中村佳代のportfolio</title>
   </head>
   <body>
-      <p class="tag">
+      <p class="tag down_tag">
           <img src="../image/top-tag.png" alt="タグ">
       </p>
     <div  class="content-section-down">
