PCSP調整追従フッター

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h3>どんなことをしてきたの？？</h3>
         <p class="common-text">
           はじめまして。
-          <br><br>中村佳代と申します。
+          <br>中村佳代と申します。
           <br><br>2017年から、WEB広告デザイナー兼WEB広告ディレクター、WEBデザイナー、WEBディレクターと、
           <br>もう少しでWEB業界４年目の、25歳女性（O型）です。
           <br><br>私はWEBにおけるデザイン×マーケティングにとても興味があり、
