PCSP調整追従フッター

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
         <p class="common-text">
           はじめまして。
           <br>中村佳代と申します。
-          <br><br>2017年から、WEB広告デザイナー兼WEB広告ディレクター、WEBデザイナー、WEBディレクターと、
-          <br>もう少しでWEB業界４年目の、25歳女性（O型）です。
+          <br><br>2017年から、WEB広告デザイナー兼WEB広告ディレクター、WEBデザイナー、WEBディレクターと様々な経験をし、もう少しでWEB業界４年目になる25歳女性（O型）です。
           <br><br>私はWEBにおけるデザイン×マーケティングにとても興味があり、
           <br><br>数字を残すこ体験が、自分の身になっていく過程を感じることがとても好きです。
           <br>そのため、経験値を積み、自分も会社も豊かになれたらと思いながら生きています。
@@ -118,13 +117,13 @@
         <h2>Direction</h2>
         <h3>どんなディレクションをするの？</h3>
         <ul class="box-wrap">
-          <li class="box"><a href="design/01.html"><img src="image/ブロードワイマックス.png" class="design_img"><p class="design_img"></a></li>
-          <li class="box"><a href="design/02.html"><img src="image/機種変更.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/03.html"><img src="image/どんふぁい.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/04.html"><img src="image/ネクモバ.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/05.html"><img src="image/テアトルアカデミー.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/06.html"><img src="image/ライスフォース.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/06.html"><img src="image/ドモ.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/01_d.html"><img src="image/ブロードワイマックス.png" class="design_img"><p class="design_img"></a></li>
+          <li class="box"><a href="design/02_d.html"><img src="image/機種変更.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/03_d.html"><img src="image/どんふぁい.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/04_d.html"><img src="image/ネクモバ.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/05_d.html"><img src="image/テアトルアカデミー.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/06_d.html"><img src="image/ライスフォース.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/07_d.html"><img src="image/ドモ.png" class="design_img"><p class="design_img"></p></a></li>
         </ul>
       </section>
     </div>
