PCSP調整追従フッター

--- a/design/01.html
+++ b/design/01.html
@@ -2,9 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../common.css">
+    <link rel="stylesheet" href="common.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
     <title>中村佳代のportfolio</title>
-    <meta name=“viewport“ content=“width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0“>
   </head>
   <body>
       <p class="tag down_tag">
