PCSP調整追従フッター

--- a/design/01_d.html
+++ b/design/01_d.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="../common.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
     <title>中村佳代のportfolio</title>
   </head>
@@ -15,7 +15,7 @@
       <p class="common-text">会社のコーポレートサイトのディレクション業務を行いました。<br>
       </p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/image/ブロードワイマックス.png" class="design_img"></p>
+        <p class="design_box"><img src="../image/ブロードワイマックス.png" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
