--- a/design/03_d.html
+++ b/design/03_d.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="../common.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes">
     <title>中村佳代のportfolio</title>
   </head>
