--- a/design/07_d.html
+++ b/design/07_d.html
@@ -15,7 +15,7 @@
         <p class="common-text">WEB広告代理店でバナーディレクション業務を行いました。<br>
       </p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/ビビアップ.png" class="design_img"></p>
+        <p class="design_box"><img src="../image/ドモ.png" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
