--- a/design/04_d.html
+++ b/design/04_d.html
@@ -15,7 +15,7 @@
         <p class="common-text">会社のコーポレートサイトのディレクション業務を行いました。<br>
       </p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/ネクモバ.png class="design_img"></p>
+        <p class="design_box"><img src="../image/ネクモバ.png" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
