--- a/design/01.html
+++ b/design/01.html
@@ -8,7 +8,9 @@
   </head>
   <body>
       <p class="tag down_tag">
-          <img src="../image/top-tag.png" alt="タグ">
+          <a href="../index.html">
+            <img src="../image/top-tag.png" alt="タグ">
+          </a>
       </p>
     <div  class="content-section-down">
       <h2>南国商品サイト詳細ページの<br>ブランケットページ作成</h2>
@@ -18,7 +20,7 @@
       CVボタンを浮き出すデザインにしたことも、獲得につなげるために仕上げたデザインになります。
       </p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/branket.png" class="design_img"></p>
+        <p class="design_box"><img src="../image/branket.jpg" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
