--- a/design/02_d.html
+++ b/design/02_d.html
@@ -8,14 +8,16 @@
   </head>
   <body>
       <p class="tag down_tag">
-          <img src="../image/top-tag.png" alt="タグ">
+          <a href="../index.html">
+            <img src="../image/top-tag.png" alt="タグ">
+          </a>
       </p>
     <div  class="content-section-down">
         <h2>BroadWiMAXの機種変更サイト</h2>
-        <p class="common-text">2−３年契約の長期会員向けの、機種変更を推進するサイトのディレクション業務を行いました。<br>
+        <p class="common-text">2−３年契約の長期会員向けの、<br>機種変更を推進するサイトのディレクション業務を行いました。<br>
       </p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/機種変更.png" class="design_img"></p>
+        <p class="design_box"><img src="../image/機種変更.jpg" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
