--- a/design/03.html
+++ b/design/03.html
@@ -8,7 +8,9 @@
   </head>
   <body>
       <p class="tag down_tag">
-          <img src="../image/top-tag.png" alt="タグ">
+          <a href="../index.html">
+            <img src="../image/top-tag.png" alt="タグ">
+          </a>
       </p>
     <div  class="content-section-down">
       <h2>障害者用のリクルートサイト</h2>
