--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <section class="top-section">
       <p class="tag">
-        <img src="image/top-tag.png" alt="タグ">
+          <img src="image/top-tag.png" alt="タグ">
       </p>
       <h1 >
         <img src="image/top-title.png" alt="ページタイトル" class="pc">
@@ -77,8 +77,12 @@
             Excel<span>★★★★</span><br>
             Powerpoint<span>★★★★</span><br>
             HTML<span>★★★★</span><br>
-            css<span>★★★★★</span><br>
+            CSS<span>★★★★★</span><br>
             Vue.js<span>★★★</span>
+            Atom<span>★★★★</span>
+            VScode<span>★★★</span>
+            Git<span>★★★</span>
+            Github<span>★★★</span>
           </div>
         </div>
         <p class="skill-background-yellow"></p>
@@ -96,7 +100,7 @@
             仕事は仕事で割り切るタイプなので、普段よりもシャッキっと黙々と行うタイプです。<br>
             KPIが設けられている場合、通常業務を進めつつ、自分の課題の数字も届くように努力します。<br>
             入社して２ヶ月でCVRとクリエイティブ共に優秀であった人に送られる<br>「社内クリエイティブ賞」をWEBディレクター
-            としていただくなど、<br>活発にアグレッシブに作業は進める傾向にあります。<br><br>
+            としていただくなど、活発にアグレッシブに作業は進める傾向にあります。<br><br>
             デザイナーの方とも連携して制作をしていく中で、相手の意見を受け入れつつ進めていくことが好きです。<br><br>
             人と会話をして、新しい発見や自分の成長に繋がると思うので、協力プレーの仕事が比較的好きです。
         </p>
@@ -107,24 +111,24 @@
         <h2>Design</h2>
         <h3>どんなデザインを作るの？</h3>
         <ul class="box-wrap">
-          <li class="box"><a href="design/01.html"><img src="image/branket.png" class="design_img"><p class="design_img"></a></li>
-          <li class="box"><a href="design/02.html"><img src="image/針病院.jpg" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/03.html"><img src="image/病院.jpg" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/04.html"><img src="image/game.jpg" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/05.html"><img src="image/b01.jpg" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/06.html"><img src="image/ビビアップ.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/01.html"><img src="image/branket_top.png" class="design_img"><p class="design_img"></a></li>
+          <li class="box"><a href="design/02.html"><img src="image/針病院_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/03.html"><img src="image/病院_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/04.html"><img src="image/game_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/05.html"><img src="image/b01_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/06.html"><img src="image/ビビアップ_top.png" class="design_img"><p class="design_img"></p></a></li>
         </ul>
         <p class="design-image direction-image"><img src="image/design-image.png"></p>
         <h2>Direction</h2>
         <h3>どんなディレクションをするの？</h3>
         <ul class="box-wrap">
-          <li class="box"><a href="design/01_d.html"><img src="image/ブロードワイマックス.png" class="design_img"><p class="design_img"></a></li>
-          <li class="box"><a href="design/02_d.html"><img src="image/機種変更.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/03_d.html"><img src="image/どんふぁい.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/04_d.html"><img src="image/ネクモバ.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/05_d.html"><img src="image/テアトルアカデミー.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/06_d.html"><img src="image/ライスフォース.png" class="design_img"><p class="design_img"></p></a></li>
-          <li class="box"><a href="design/07_d.html"><img src="image/ドモ.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/01_d.html"><img src="image/ブロードワイマックス_top.png" class="design_img"><p class="design_img"></a></li>
+          <li class="box"><a href="design/02_d.html"><img src="image/機種変更_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/03_d.html"><img src="image/どんふぁい_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/04_d.html"><img src="image/ネクモバ_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/05_d.html"><img src="image/テアトルアカデミー_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/06_d.html"><img src="image/ライスフォース_top.png" class="design_img"><p class="design_img"></p></a></li>
+          <li class="box"><a href="design/07_d.html"><img src="image/ドモ_top.png" class="design_img"><p class="design_img"></p></a></li>
         </ul>
       </section>
     </div>
