--- a/design/04_d.html
+++ b/design/04_d.html
@@ -8,14 +8,16 @@
   </head>
   <body>
       <p class="tag down_tag">
-          <img src="../image/top-tag.png" alt="タグ">
+          <a href="../index.html">
+            <img src="../image/top-tag.png" alt="タグ">
+          </a>
       </p>
     <div  class="content-section-down">
         <h2>NEXTmobileの公式サイト</h2>
         <p class="common-text">会社のコーポレートサイトのディレクション業務を行いました。<br>
       </p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/ネクモバ.png" class="design_img"></p>
+        <p class="design_box"><img src="../image/ネクモバ.jpg" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
