--- a/design/05_d.html
+++ b/design/05_d.html
@@ -8,14 +8,16 @@
   </head>
   <body>
       <p class="tag down_tag">
-          <img src="../image/top-tag.png" alt="タグ">
+          <a href="../index.html">
+            <img src="../image/top-tag.png" alt="タグ">
+          </a>
       </p>
     <div  class="content-section-down">
-        <h2>テアトルアカデミーのLP・バナーディレクション</h2>
+        <h2>テアトルアカデミーの<br>LP・バナーディレクション</h2>
         <p class="common-text">WEB広告代理店でバナーディレクション業務を行いました。<br>
       </p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/テアトルアカデミー.png" class="design_img"></p>
+        <p class="design_box"><img src="../image/テアトルアカデミー.jpg" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
