--- a/design/06.html
+++ b/design/06.html
@@ -8,14 +8,16 @@
   </head>
   <body>
       <p class="tag down_tag">
-          <img src="../image/top-tag.png" alt="タグ">
+          <a href="../index.html">
+            <img src="../image/top-tag.png" alt="タグ">
+          </a>
       </p>
     <div  class="content-section-down">
       <h2>テレビの制作会社のサイト</h2>
       <p class="common-text">会社のコーポレートサイトのデザイン・コーディングの更新作業を行いました。<br>
       </p>
       <div class="design_box_wrap">
-        <p class="design_box"><img src="../image/ビビアップ.png" class="design_img"></p>
+        <p class="design_box"><img src="../image/ビビアップ.jpg" class="design_img"></p>
         <p class=""></p>
       </div>
     </div>
