--- a/design/01.html
+++ b/design/01.html
@@ -16,6 +16,7 @@
       <h2>南国商品サイト詳細ページの<br>ブランケットページ作成</h2>
       <p class="common-text">ブランケットの使い勝手の良さを前面に出したページにしたいと思い、<br>
       海で使用するイメージをユーザーが持てるような、場面を感じさせるビジュアルのイラストを豊富に配置しました。<br>
+      ※イラストは全て自分で制作<br>
       使用したい気持ちを掻き立てるような、明るいテイストで休日の南国をイメージしました。
       CVボタンを浮き出すデザインにしたことも、獲得につなげるために仕上げたデザインになります。
       </p>
