--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
             Illustlator<span>★★★★★</span><br>
             XD<span>★★★★★</span><br>
             Excel<span>★★★★</span><br>
-            Powerpoint<span>★★★★</span><br>
+            Powerpoint<span>★★★★</span><br>
             HTML<span>★★★★</span><br>
             CSS<span>★★★★★</span><br>
-            Vue.js<span>★★★</span>
-            Atom<span>★★★★</span>
-            VScode<span>★★★</span>
-            Git<span>★★★</span>
+            Vue.js<span>★★★</span><br>
+            Atom<span>★★★★</span><br>
+            VScode<span>★★★</span><br>
+            Git<span>★★★</span><br>
             Github<span>★★★</span>
           </div>
         </div>
