--- a/design/01_d.html
+++ b/design/01_d.html
@@ -15,6 +15,7 @@
     <div  class="content-section-down">
       <h2>BroadWiMAXの公式サイト</h2>
       <p class="common-text">会社のコーポレートサイトのディレクション業務を行いました。<br>
+        <a href="https://wimax-broad.jp/">https://wimax-broad.jp</a>
       </p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/ブロードワイマックス.jpg" class="design_img"></p>
