--- a/design/02_d.html
+++ b/design/02_d.html
@@ -15,6 +15,7 @@
     <div  class="content-section-down">
         <h2>BroadWiMAXの機種変更サイト</h2>
         <p class="common-text">2−３年契約の長期会員向けの、<br>機種変更を推進するサイトのディレクション業務を行いました。<br>
+          <a href="https://wimax-broad.jp/lp/norikae3">https://wimax-broad.jp/lp/norikae3</a>
       </p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/機種変更.jpg" class="design_img"></p>
