--- a/design/04_d.html
+++ b/design/04_d.html
@@ -15,6 +15,7 @@
     <div  class="content-section-down">
         <h2>NEXTmobileの公式サイト</h2>
         <p class="common-text">会社のコーポレートサイトのディレクション業務を行いました。<br>
+        <a href="https://next-mobile.jp/">https://next-mobile.jp</a>
       </p>
       <div class="design_box_wrap">
         <p class="design_box"><img src="../image/ネクモバ.jpg" class="design_img"></p>
