--- a/design/02_d.html
+++ b/design/02_d.html
@@ -13,7 +13,7 @@
           </a>
       </p>
     <div  class="content-section-down">
-        <h2>BroadWiMAXの機種変更サイト</h2>
+        <h2>BroadWiMAXの<br>機種変更サイト</h2>
         <p class="common-text">2−３年契約の長期会員向けの、<br>機種変更を推進するサイトのディレクション業務を行いました。<br>
           <a href="https://wimax-broad.jp/lp/norikae3">https://wimax-broad.jp/lp/norikae3</a>
       </p>
