--- a/design/01.html
+++ b/design/01.html
@@ -13,7 +13,7 @@
           </a>
       </p>
     <div  class="content-section-down">
-      <h2>南国商品サイト詳細ページの<br>ブランケットページ作成</h2>
+      <h2>南国商品サイトの<br>ブランケットページ作成</h2>
       <p class="common-text">ブランケットの使い勝手の良さを前面に出したページにしたいと思い、<br>
       海で使用するイメージをユーザーが持てるような、場面を感じさせるビジュアルのイラストを豊富に配置しました。<br>
       ※イラストは全て自分で制作<br>
