2021バージョン

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
           <h3>今どんなことができるの？？</h3>
           <p class="common-text">
             仕事で培ったものや、自主勉強で学んだものまで様々あります。
-            <br>朝１時間早く起きて、カフェで気になっている分野の自主学習。帰宅をしてオンライン英会話で苦手克服するのが今の日課です。
-            <br>（仕事でぐったりの時もあるので、負荷をかけすぎない程度に継続してます）
+            <br>平日1日3時間勉強することを心がけています。
           </p>
           <div class="evaluation">
             Photoshop<span>★★★★★</span><br>
@@ -78,7 +77,8 @@
             Powerpoint<span>★★★★</span><br>
             HTML<span>★★★★</span><br>
             CSS<span>★★★★★</span><br>
-            Vue.js<span>★★★</span><br>
+            Vue.js<span>★★</span><br>
+            Ruby on Railss<span>★★</span><br>
             Atom<span>★★★★</span><br>
             VScode<span>★★★</span><br>
             Git<span>★★★</span><br>
@@ -86,8 +86,8 @@
           </div>
         </div>
         <p class="skill-background-yellow"></p>
-        <p class="skill-background-gray"></p>
-      </section>
+        <!-- <p class="skill-background-gray"></p> -->
+      <!-- </section>
       <section class="work" id="sec3">
         <div class="background-shadow work-background-shadow">
         <h2>Work</h2>
@@ -105,7 +105,7 @@
             人と会話をして、新しい発見や自分の成長に繋がると思うので、協力プレーの仕事が比較的好きです。
         </p>
       </div>
-      </section>
+      </section> -->
       <section class="design" id="sec4">
         <p class="design-image"><img src="image/design-image.png"></p>
         <h2>Design</h2>
