2021バージョン修正

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <h3>どんなことをしてきたの？？</h3>
         <p class="common-text">
           はじめまして。
-          <br>中村佳代と申します。
+          <br>中村佳代(26歳)と申します。
           <br><br>2017年から、WEB広告デザイナー兼WEB広告ディレクター、WEBデザイナー、
-          <br>WEBディレクターと様々な経験をし、もう少しでWEB業界４年目になる25歳女性（O型）です。
+          <br>WEBディレクターと様々な経験をしてきました。
           <br><br>私はWEBにおけるデザイン×マーケティングにとても興味があり、
           <br>数字を残すこ体験が、自分の身になっていく過程を感じることがとても好きです。
           <br>そのため、経験値を積み、自分も会社も豊かになれたらと思いながら生きています。
